// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavBar should render collapsed in subcategory route 1`] = `
<div>
  <nav
    class="css-zew14h"
  >
    <div
      class="css-1v5akrw"
    >
      <div
        class="css-150m7z3"
      >
        <a
          class=""
          data-discover="true"
          href="/infrastructure"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-r7jz06"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              terminal
            </span>
            <p
              class="css-1dudv4b"
            >
              Infrastructure
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-150m7z3"
      >
        <a
          aria-current="page"
          class="active"
          data-discover="true"
          href="/software"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-1tbf82h"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; font-variation-settings: 'FILL' 1; transition: all 0.3s ease;"
            >
              integration_instructions
            </span>
            <p
              class="css-1q0f2tm"
            >
              Software
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-150m7z3"
      >
        <a
          class=""
          data-discover="true"
          href="/security"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-r7jz06"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              shield
            </span>
            <p
              class="css-1dudv4b"
            >
              Security
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-150m7z3"
      >
        <a
          class=""
          data-discover="true"
          href="/learning"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-r7jz06"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              school
            </span>
            <p
              class="css-1dudv4b"
            >
              Learning
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-150m7z3"
      >
        <a
          class=""
          data-discover="true"
          href="/resources"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-r7jz06"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              folder_zip
            </span>
            <p
              class="css-1dudv4b"
            >
              Resources
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-150m7z3"
      >
        <a
          class=""
          data-discover="true"
          href="/tools"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-r7jz06"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              build
            </span>
            <p
              class="css-1dudv4b"
            >
              Tools
            </p>
          </div>
        </a>
      </div>
    </div>
  </nav>
</div>
`;

exports[`SideNavBar should render correctly in default state 1`] = `
<div>
  <nav
    class="css-1w9x71j"
  >
    <div
      class="css-19jgx3e"
    >
      <p
        class="css-15fik6v"
      >
        Navigation
      </p>
      <div
        class="css-81bkrc"
      />
      <p
        class="css-11nhyxh"
      >
        SYSTEM LIBRARIES
      </p>
    </div>
    <div
      class="css-1v5akrw"
    >
      <div
        class="css-rtymh1"
      >
        <a
          class=""
          data-discover="true"
          href="/infrastructure"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-17zk0ji"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              terminal
            </span>
            <p
              class="css-of2xjv"
            >
              Infrastructure
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-rtymh1"
      >
        <a
          class=""
          data-discover="true"
          href="/software"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-17zk0ji"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              integration_instructions
            </span>
            <p
              class="css-of2xjv"
            >
              Software
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-rtymh1"
      >
        <a
          class=""
          data-discover="true"
          href="/security"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-17zk0ji"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              shield
            </span>
            <p
              class="css-of2xjv"
            >
              Security
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-rtymh1"
      >
        <a
          class=""
          data-discover="true"
          href="/learning"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-17zk0ji"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              school
            </span>
            <p
              class="css-of2xjv"
            >
              Learning
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-rtymh1"
      >
        <a
          class=""
          data-discover="true"
          href="/resources"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-17zk0ji"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              folder_zip
            </span>
            <p
              class="css-of2xjv"
            >
              Resources
            </p>
          </div>
        </a>
      </div>
      <div
        class="css-rtymh1"
      >
        <a
          class=""
          data-discover="true"
          href="/tools"
          style="text-decoration: none; display: block;"
        >
          <div
            class="css-17zk0ji"
          >
            <span
              class="material-symbols-outlined"
              style="font-size: 20px; transition: all 0.3s ease;"
            >
              build
            </span>
            <p
              class="css-of2xjv"
            >
              Tools
            </p>
          </div>
        </a>
      </div>
    </div>
  </nav>
</div>
`;
